--- a/app/design/adminhtml/default/default/template/scriptkid-productupdater/overview.phtml
+++ b/app/design/adminhtml/default/default/template/scriptkid-productupdater/overview.phtml
@@ -1,3 +1,6 @@
-<div class="page-title">
-  <h2><?php echo $this->__('Overview'); ?></h2>
+<div class="content-header">
+  <h3><?php echo $this->__('Overview'); ?></h3>
+</div>
+<div class="content">
+  <a href="<?php echo Mage::helper('adminhtml')->getUrl('adminhtml/productupdater/manual'); ?>">Manual Action</a>
 </div>
